--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,13 @@
 body {
-  padding-top: 20px;
-  padding-bottom: 40px;
+  background: #ebe9eb
 }
 
 /* Custom container */
 .container-narrow {
+  padding: 15px 40px;
   margin: 0 auto;
   max-width: 700px;
+  background: #fff;
 }
 .container-narrow > hr {
   margin: 30px 0;
