--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,36 @@
+@import 'https://fonts.googleapis.com/css?family=Titillium+Web';
+@import 'https://fonts.googleapis.com/css?family=Dosis';
+
 body {
-  background: #ebe9eb
+  /*background: #ebe9eb;*/
+  padding-top: 50px;
+  font-family: 'Dosis', sans-serif;
+  font-size: 20px;
+}
+h1, h2, nav, footer {
+  font-family: 'Titillium Web', sans-serif;
+  text-transform: uppercase;
+}
+.jbtn {
+  background: #31829c;
+  border-radius: 2px;
+  box-shadow: 1px 1px 1px #999;
+}
+.jumbotron .container .jbtn:hover {
+  color: #fff;
+  background-color: #33a2c5;
+  border-color: #33a2c5;
+}
+.navbar-inverse {
+  background: #2d2529;
+}
+.jumbotron p {
+  font-size: 24px;
+}
+.navbar-inverse .navbar-brand {
+  transition: background-color 0.5s ease;
 }
 
-/* Custom container */
-.container-narrow {
-  padding: 15px 40px;
-  margin: 0 auto;
-  max-width: 700px;
-  background: #fff;
-}
-.container-narrow > hr {
-  margin: 30px 0;
-}
-
-/* Main marketing message and sign up button */
-.jumbotron {
-  margin: 60px 0;
-  text-align: center;
-}
-.jumbotron h1 {
-  font-size: 72px;
-  line-height: 1;
-}
-.jumbotron .btn {
-  font-size: 21px;
-  padding: 14px 24px;
-}
-
-/* Supporting marketing content */
-.marketing {
-  margin: 60px 0;
-}
-.marketing p + h4 {
-  margin-top: 28px;
+.navbar-inverse .navbar-brand:hover, .navbar-inverse .navbar-brand:focus {
+  text-shadow: 3px 0 2px #e74046, -3px 0 2px #33a2c5;
 }
