--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,15 @@ h1, h2, nav, footer {
   border-radius: 2px;
   box-shadow: 1px 1px 1px #999;
 }
+.jumbotron {
+  background-color: #F5F5F7;
+  padding-top: 0;
+}
+@media screen and (min-width: 768px) {
+.jumbotron {
+    padding-top: 0;
+  }
+}
 .jumbotron .container .jbtn:hover {
   color: #fff;
   background-color: #33a2c5;
@@ -27,10 +36,38 @@ h1, h2, nav, footer {
 .jumbotron p {
   font-size: 24px;
 }
-.navbar-inverse .navbar-brand {
-  transition: background-color 0.5s ease;
-}
+
 
 .navbar-inverse .navbar-brand:hover, .navbar-inverse .navbar-brand:focus {
-  text-shadow: 3px 0 2px #e74046, -3px 0 2px #33a2c5;
+  text-shadow: 4px 0 2px #e74046, -4px 0 2px #33a2c5;
+}
+.navbar-inverse .navbar-brand {
+  transition: text-shadow .7s ease;
+}
+.row .vdbtn:hover {
+  color: #e74046;
+  background-color: #fff; 
+}
+.container .subctner {
+  border: 1px solid #fff;
+    padding: 0 15px;
+    border-radius: 2px;
+    box-shadow: 1px 1px 1px 1px #ebe9eb;
+}
+.subctner a {
+  color: #2d2529;
+  cursor: pointer;
+}
+.subctner a:hover {
+  color: #23262a;
+  text-decoration: none;
+}
+
+.subctner img {
+  width: 100%;
+    margin-bottom: 10px
+}
+footer p {
+  font-size: 12px;
+  color: #b6b6b8;
 }
