--- a/css/style.css
+++ b/css/style.css
@@ -7,15 +7,18 @@ body {
   font-family: 'Dosis', sans-serif;
   font-size: 20px;
 }
-h1, h2, nav, footer {
+h1, h2, h3, nav, footer {
   font-family: 'Titillium Web', sans-serif;
   text-transform: uppercase;
 }
+/*button on jumbotron*/
 .jbtn {
+  color: #fff;
   background: #31829c;
   border-radius: 2px;
   box-shadow: 1px 1px 1px #999;
 }
+/*jumbotron styles*/
 .jumbotron {
   background-color: #F5F5F7;
   padding-top: 0;
@@ -32,27 +35,61 @@ h1, h2, nav, footer {
 }
 .navbar-inverse {
   background: #2d2529;
+  opacity: .9;
+  box-shadow: 0px 2px 3px #999;
 }
 .jumbotron p {
-  font-size: 24px;
+  font-size: 2em;
 }
-
-
+/*hover styles on brand and nav bar*/
 .navbar-inverse .navbar-brand:hover, .navbar-inverse .navbar-brand:focus {
   text-shadow: 4px 0 2px #e74046, -4px 0 2px #33a2c5;
 }
 .navbar-inverse .navbar-brand {
   transition: text-shadow .7s ease;
 }
+.navul li a:hover, .navul li a:focus {  
+  text-shadow: 5px 1px 1px #e74046, -5px 1px 1px #33a2c5;
+}
+.navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
+  font-size: 15px;
+}
+.navul li a {
+  transition: text-shadow .5s ease, font-size 1.2s ease;
+}
+.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
+  color: #fff;
+  background-color: #2d2529; 
+}
+.navbar-nav > li {
+  padding: 7px;
+}
+.navbar-inverse .navbar-nav > li > a {
+  color: #eee;
+}  
+.navbar-nav > li > a {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+@media (min-width: 768px) {
+  .navbar-nav > li > a {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+}
+.navbar-inverse .navbar-nav > li > a {
+    font-size: 14px;
+}
 .row .vdbtn:hover {
   color: #e74046;
   background-color: #fff; 
 }
+/*sub container styles*/
 .container .subctner {
   border: 1px solid #fff;
-    padding: 0 15px;
-    border-radius: 2px;
-    box-shadow: 1px 1px 1px 1px #ebe9eb;
+  padding: 0 15px;
+  border-radius: 2px;
+  box-shadow: 1px 1px 1px 1px #ebe9eb;
 }
 .subctner a {
   color: #2d2529;
@@ -62,10 +99,26 @@ h1, h2, nav, footer {
   color: #23262a;
   text-decoration: none;
 }
-
 .subctner img {
   width: 100%;
-    margin-bottom: 10px
+  margin-bottom: 10px
+}
+/*carousel styles*/
+#carousel-example-generic {
+  text-align: center;
+}
+.carousel-inner > .item > img, .carousel-inner > .item > a > img {
+    display: inline-block;
+    margin: 5px 6px;
+}
+.carousel-indicators .active {    
+    background-color: #fff;
+}
+.carousel-inner .crsimg img:hover {
+   box-shadow: 2px 0px 2px rgba(231,64,70, .5), -2px 0px 2px rgba(51,162,197, .5);   
+}
+.carousel-inner .crsimg img {
+  transition: box-shadow .5s ease-in-out;
 }
 footer p {
   font-size: 12px;
